--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -16,10 +16,19 @@
       <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#/">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#/">Contact</a></li>
+          <li><a href="#/">Home</a></li>
+          <li><a ng-href="#/about" ng-click="checkLoginState()">About</a></li>
         </ul>
+
+        <div class="nav navbar-nav navbar-right">
+          <div ng-if="!loggedIn()" ng-include="'views/partials/fbLoginButton.html'"></div>
+          <div ng-if="loggedIn()">
+            <a href="#/" ng-click="logout()">{{user.name}}</a>
+            <a href="#/"><img ng-src="{{user.picture.data.url}}"></a>
+          </div>
+
+        </div>
+
       </div>
     </div>
   </div>
