Was missing script import.

--- a/app/views/partials/fbLoginButton.html
+++ b/app/views/partials/fbLoginButton.html
@@ -1,2 +1,1 @@
-<fb:login-button scope="public_profile,email,user_friends">
-</fb:login-button>
+<div class="fb-login-button" scope="public_profile,email,user_friends" data-max-rows="1" data-size="large" data-auto-logout-link="false"></div>
