Work on facebook login page. Added ui-router for routing.

--- a/app/views/home.view.html
+++ b/app/views/home.view.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1>Bitleague</h1>
   <p class="lead">
-    <img src="http:\\placehold.it\350x200">
+    <img width="350" height="200" src="http:\\placehold.it\350x200">
   </p>
 </div>
 
