--- a/app/views/partials/fbLoginButton.html
+++ b/app/views/partials/fbLoginButton.html
@@ -1,1 +1,12 @@
-<div class="fb-login-button" scope="public_profile,email,user_friends" data-max-rows="1" data-size="large" data-auto-logout-link="false"></div>
+<!--<fb:login-button
+  scope="public_profile,email,user_friends"
+  data-max-rows="1"
+  data-size="large"
+  data-auto-logout-link="false"
+  onlogin="onlogin();"
+>
+  Login with Facebook
+</fb:login-button>
+<br>-->
+
+<button id="facebookLoginBtn" ng-click="login()">Login with Facebook</button>
