--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -18,6 +18,9 @@
         <ul class="nav navbar-nav">
           <li><a ui-sref="home">Home</a></li>
           <li><a ui-sref="about">About</a></li>
+          <li><a ui-sref="drag">Drag & Drop</a></li>
+          <li><a ui-sref="sortable">Sortable List</a></li>
+          <li><a ui-sref="table">Filtering & Sortable Table</a></li>
         </ul>
 
         <div class="nav navbar-nav navbar-right">
