Work on draft. Added ngWebsockets.

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -21,6 +21,7 @@
           <li><a ui-sref="drag">Drag & Drop</a></li>
           <li><a ui-sref="sortable">Sortable List</a></li>
           <li><a ui-sref="table">Filtering & Sortable Table</a></li>
+          <li><a ui-sref="draft">Draft</a></li>
         </ul>
 
         <div class="nav navbar-nav navbar-right">
