--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -1,9 +1,9 @@
-<p ng-if="draft_state=='connecting'"> Connecting to draft...</p>
+<p ng-if="draft.state=='connecting'"> Connecting to draft...</p>
 
-<div ng-if="draft_state=='connected'">
+<div ng-if="draft.state=='connected'">
   <p>Online users:</p>
   <ul>
-  <li ng-repeat="user in draft_user_list">
+  <li ng-repeat="user in draft.user_list">
       {{user}}
   </li>
   </ul>
