--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -2,30 +2,101 @@
 <p ng-if="draft.state=='loading'"> Loading...</p>
 
 <div ng-if="draft.state=='connected'">
-  <p>Time left: {{draft.timer}}</p>
-  <p>Currently picking: {{draft.user_list.usernames[draft.currentUser]}}</p>
 
-  <p>Users:</p>
-  <ul>
-    <li ng-repeat="user_id in draft.user_list.users">
-      {{draft.user_list.usernames[user_id]}} <span ng-if="draft.user_list.online[user_id]"> - online</span>
-    </li>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+      <div class="col-lg-3">
+        <p>Time left: {{draft.timer}}</p>
+        <p>Currently picking: {{draft.user_list.usernames[draft.currentUser]}}</p>
 
-  </ul>
+        <p>Users:</p>
+        <ul>
+          <li ng-repeat="user_id in draft.user_list.users">
+            {{draft.user_list.usernames[user_id]}} <span ng-if="draft.user_list.online[user_id]"> - online</span>
+          </li>
 
-  <p>Picks:</p>
-  <ul>
-    <li ng-repeat="pick in draft.picks">
-      {{draft.user_list.usernames[pick.user_id]}}: {{draft.players[pick.player_id].name}} - {{draft.players[pick.player_id].team}} - {{draft.players[pick.player_id].positionDescription}}
-    </li>
-  </ul>
+        </ul>
 
-  <p>Players:</p>
-  <ul>
-    <li ng-repeat="player in draft.players_left">
-      <button ng-click="draft.pick(player._id)">{{player.number}} - {{player.name}} - {{player.positionDescription}} - {{player.team}}</button>
-    </li>
-  </ul>
+        <p>Picks:</p>
+        <ul>
+          <li ng-repeat="pick in draft.picks">
+            {{draft.user_list.usernames[pick.user_id]}}: {{draft.players[pick.player_id].name}} - {{draft.players[pick.player_id].team}} - {{draft.players[pick.player_id].positionDescription}}
+          </li>
+        </ul>
+      </div>
+      <div class="col-lg-9">
+        <div class="row">
+          <div class="col-xs-4">
+            <label for="search">Search:</label>
+            <input ng-model="q" id="search" class="form-control" placeholder="Filter text">
+          </div>
+          <div class="col-xs-4">
+            <label for="search">items per page:</label>
+            <input type="number" min="1" max="100" class="form-control" ng-model="pageSize">
+          </div>
+          <div class="col-xs-4">
+            <h4>Players: {{filtered.length}}</h4>
+          </div>
+        </div>
+        <br>
+        <table class="table table-bordered table-striped">
+
+          <thead>
+            <tr>
+              <td>
+                <a ui-sref="draft" ng-click="sortType = ''; sortReverse = !sortReverse">
+                  Number 
+                  <span ng-show="sortType == 'number' && !sortReverse" class="fa fa-caret-down"></span>
+                  <span ng-show="sortType == 'number' && sortReverse" class="fa fa-caret-up"></span>
+                </a>
+              </td>
+              <td>
+                <a ui-sref="draft" ng-click="sortType = 'name'; sortReverse = !sortReverse">
+                  Player 
+                  <span ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></span>
+                  <span ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></span>
+                </a>
+              </td>
+              <td>
+                <a ui-sref="draft" ng-click="sortType = 'position'; sortReverse = !sortReverse">
+                  Position 
+                  <span ng-show="sortType == 'position' && !sortReverse" class="fa fa-caret-down"></span>
+                  <span ng-show="sortType == 'position' && sortReverse" class="fa fa-caret-up"></span>
+                </a>
+              </td>
+              <td>
+                <a ui-sref="draft" ng-click="sortType = 'team'; sortReverse = !sortReverse">
+                  Team 
+                  <span ng-show="sortType == 'team' && !sortReverse" class="fa fa-caret-down"></span>
+                  <span ng-show="sortType == 'team' && sortReverse" class="fa fa-caret-up"></span>
+                </a>
+              </td>
+              <td>
+                <a ui-sref="draft"></a>
+              </td>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr dir-paginate="player in filtered = (draft.players_left | filter:q) | itemsPerPage: pageSize | orderBy:sortType:sortReverse" current-page="currentPage" >
+              <td>{{ player.number}}</td>
+              <td>{{ player.name }}</td>
+              <td>{{ player.positionDescription }}</td>
+              <td>{{ player.team }}</td>
+              <td><button ng-click="draft.pick(player._id)">Pick</button></td>
+            </tr>
+          </tbody>
+        </table>
+        <div >
+          <div class="text-center">
+            <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="../scripts/dirPagination.tpl.html"></dir-pagination-controls>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 </div>
