--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -44,45 +44,23 @@
 
           <thead>
             <tr>
-              <td>
-                <a ui-sref="draft" ng-click="sortType = ''; sortReverse = !sortReverse">
-                  Number 
-                  <span ng-show="sortType == 'number' && !sortReverse" class="fa fa-caret-down"></span>
-                  <span ng-show="sortType == 'number' && sortReverse" class="fa fa-caret-up"></span>
-                </a>
-              </td>
-              <td>
-                <a ui-sref="draft" ng-click="sortType = 'name'; sortReverse = !sortReverse">
-                  Player 
-                  <span ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></span>
-                  <span ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></span>
-                </a>
-              </td>
-              <td>
-                <a ui-sref="draft" ng-click="sortType = 'position'; sortReverse = !sortReverse">
-                  Position 
-                  <span ng-show="sortType == 'position' && !sortReverse" class="fa fa-caret-down"></span>
-                  <span ng-show="sortType == 'position' && sortReverse" class="fa fa-caret-up"></span>
-                </a>
-              </td>
-              <td>
-                <a ui-sref="draft" ng-click="sortType = 'team'; sortReverse = !sortReverse">
-                  Team 
-                  <span ng-show="sortType == 'team' && !sortReverse" class="fa fa-caret-down"></span>
-                  <span ng-show="sortType == 'team' && sortReverse" class="fa fa-caret-up"></span>
-                </a>
-              </td>
-              <td>
-                <a ui-sref="draft"></a>
-              </td>
+              <th ng-click="draft.sortTable('position')">Position
+                <span class="glyphicon sort-icon" ng-show="draft.sortKey=='position'" ng-class="{'glyphicon-chevron-up':draft.reverse,'glyphicon-chevron-down':!draft.reverse}"></span>
+              </th>
+              <th ng-click="draft.sortTable('name')">Player
+                <span class="glyphicon sort-icon" ng-show="draft.sortKey=='name'" ng-class="{'glyphicon-chevron-up':draft.reverse,'glyphicon-chevron-down':!draft.reverse}"></span>
+              </th>
+              <th ng-click="draft.sortTable('team')">Team
+                <span class="glyphicon sort-icon" ng-show="draft.sortKey=='team'" ng-class="{'glyphicon-chevron-up':draft.reverse,'glyphicon-chevron-down':!draft.reverse}"></span>
+              </th>
+              <th></th>
             </tr>
           </thead>
 
           <tbody>
-            <tr dir-paginate="player in filtered = (draft.players_left | filter:q) | itemsPerPage: pageSize | orderBy:sortType:sortReverse" current-page="currentPage" >
-              <td>{{ player.number}}</td>
-              <td>{{ player.name }}</td>
+            <tr dir-paginate="player in filtered = (draft.players_left | filter:q | orderBy:draft.sortKey:draft.reverse) | itemsPerPage: pageSize" current-page="currentPage" >
               <td>{{ player.positionDescription }}</td>
+              <td>{{ player.name }}</td>
               <td>{{ player.team }}</td>
               <td><button ng-click="draft.pick(player._id)">Pick</button></td>
             </tr>
