--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -21,6 +21,8 @@
           <li><a ui-sref="drag">Drag & Drop</a></li>
           <li><a ui-sref="sortable">Sortable List</a></li>
           <li><a ui-sref="table">Filtering & Sortable Table</a></li>
+          <li><a ui-sref="new_league">Create League</a></li>
+          <li><a ui-sref="join_league">Join League</a></li>
           <li><a ui-sref="draft({league_id:'57238a275fee911578f1227b'})">Draft</a></li>
         </ul>
 
