Added link from league to draft.

--- a/app/views/league.view.html
+++ b/app/views/league.view.html
@@ -1,4 +1,8 @@
-<p>League "{{league.name}}"</p>
+<p>League "{{league.name}}" </p>
 
-<pre>{{league}}</pre>
+<p>code: {{league_id}}<p>
+
+<a ui-sref="draft({id:league_id})">Draft</a>
+
+
 
