--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -18,12 +18,11 @@
         <ul class="nav navbar-nav">
           <li><a ui-sref="home">Home</a></li>
           <li><a ui-sref="about">About</a></li>
-          <li><a ui-sref="drag">Drag & Drop</a></li>
+          <!--<li><a ui-sref="drag">Drag & Drop</a></li>
           <li><a ui-sref="sortable">Sortable List</a></li>
-          <li><a ui-sref="table">Filtering & Sortable Table</a></li>
+          <li><a ui-sref="table">Filtering & Sortable Table</a></li>-->
           <li><a ui-sref="new_league">Create League</a></li>
           <li><a ui-sref="join_league">Join League</a></li>
-          <li><a ui-sref="draft({league_id:'57238a275fee911578f1227b'})">Draft</a></li>
         </ul>
 
         <div class="nav navbar-nav navbar-right">
