Removed draft service

--- a/app/views/join_league.view.html
+++ b/app/views/join_league.view.html
@@ -2,4 +2,4 @@
 
 <input type="text" ng-model="league_id" placeholder="League ID">
 
-<button ng-click="createLeague()">Join League!</button>
+<button ng-click="joinLeague()">Join League!</button>
