--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -1,29 +1,34 @@
-<p ng-if="draft.state=='connecting'"> Connecting to draft...</p>
-<p ng-if="draft.state=='loading'"> Loading...</p>
 
-<div ng-if="draft.state=='connected'">
-  <p>Time left: {{draft.timer}}</p>
-  <p>Currently picking: {{draft.user_list.usernames[draft.currentUser]}}</p>
+<p ng-if="state=='connecting'"> Connecting to draft...</p>
+<p ng-if="state=='loading'"> Loading...</p>
+
+<div ng-if="state=='connected'">
+  <div ng-if="!started">
+    <button ng-click="startDraft()">Start Draft</button>
+  </div>
+
+  <p>Time left: {{timer}}</p>
+  <p>Currently picking: {{user_list.usernames[currentUser]}}</p>
 
   <p>Users:</p>
   <ul>
-    <li ng-repeat="user_id in draft.user_list.users">
-      {{draft.user_list.usernames[user_id]}} <span ng-if="draft.user_list.online[user_id]"> - online</span>
+    <li ng-repeat="user_id in user_list.users">
+      {{user_list.usernames[user_id]}} <span ng-if="user_list.online[user_id]"> - online</span>
     </li>
 
   </ul>
 
   <p>Picks:</p>
   <ul>
-    <li ng-repeat="pick in draft.picks">
-      {{draft.user_list.usernames[pick.user_id]}}: {{draft.players[pick.player_id].name}} - {{draft.players[pick.player_id].team}} - {{draft.players[pick.player_id].positionDescription}}
+    <li ng-repeat="pick in picks">
+      {{user_list.usernames[pick.user_id]}}: {{players[pick.player_id].name}} - {{players[pick.player_id].team}} - {{players[pick.player_id].positionDescription}}
     </li>
   </ul>
 
   <p>Players:</p>
   <ul>
-    <li ng-repeat="player in draft.players_left">
-      <button ng-click="draft.pick(player._id)">{{player.number}} - {{player.name}} - {{player.positionDescription}} - {{player.team}}</button>
+    <li ng-repeat="player in players_left">
+      <button ng-click="pick(player._id)">{{player.number}} - {{player.name}} - {{player.positionDescription}} - {{player.team}}</button>
     </li>
   </ul>
 </div>
