--- a/app/views/league.view.html
+++ b/app/views/league.view.html
@@ -1,14 +1,17 @@
-<p>League "{{league.name}}" </p>
+<p ng-if="league==null">Loading...</p>
+<div ng-if="league != null">
+  <p>League "{{league.name}}" </p>
 
-<p>code: {{league_id}}<p>
+  <p>code: {{league_id}}<p>
+  <pre>{{league}}</pre>
 
-<p><a ui-sref="draft({id:league_id})">Draft</a></p>
+  <p ng-if="league.state != 'DURATION'"><a ui-sref="draft({id:league_id})">Draft</a></p>
 
-Users:
-<ul>
-  <li  ng-repeat="user in league.users">
-    {{user.name}}
-  </li>
-</ul>
-
+  Users:
+  <ul>
+    <li  ng-repeat="user in league.users">
+      {{user.name}}
+    </li>
+  </ul>
+</div>
 
