--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -9,75 +9,117 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-      <div class="col-lg-3">
-        <p ng-if="timer > 0">Time left: {{timer}}</p>
-        <p ng-if="currentUser != 'noone'">Currently picking: {{user_list.usernames[currentUser]}}</p>
+        
+        <div class="col-lg-3">
+          <p ng-if="timer > 0">Time left: {{timer}}</p>
+          <p ng-if="currentUser != 'noone'">Currently picking: {{user_list.usernames[currentUser]}}</p>
 
-        <p>Users:</p>
-        <ul>
-          <li ng-repeat="user_id in user_list.users">
-            {{user_list.usernames[user_id]}} <span ng-if="user_list.online[user_id]"> - online</span>
-          </li>
+          <p>Users:</p>
+          <ul>
+            <li ng-repeat="user_id in user_list.users">
+              {{user_list.usernames[user_id]}} <span ng-if="user_list.online[user_id]"> - online</span>
+            </li>
 
-        </ul>
+          </ul>
 
-        <p>Picks:</p>
-        <ul>
-          <li ng-repeat="pick in picks">
-            {{user_list.usernames[pick.user_id]}}: {{players[pick.player_id].name}} - {{players[pick.player_id].team}} - {{players[pick.player_id].positionDescription}}
-          </li>
-        </ul>
-      </div>
-      <div class="col-lg-9">
-        <div class="row">
-          <div class="col-xs-4">
-            <label for="search">Search:</label>
-            <input ng-model="q" id="search" class="form-control" placeholder="Filter text">
+          <p>Picks:</p>
+          <ul>
+            <li ng-repeat="pick in picks">
+              {{user_list.usernames[pick.user_id]}}: {{players[pick.player_id].name}} - {{players[pick.player_id].team}} - {{players[pick.player_id].positionDescription}}
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-xs-4">
+              <label for="search">Search:</label>
+              <input ng-model="q" id="search" class="form-control" placeholder="Filter text">
+            </div>
+            <div class="col-xs-4">
+              <label for="search">items per page:</label>
+              <input type="number" min="1" max="100" class="form-control" ng-model="pageSize">
+            </div>
+            <div class="col-xs-4">
+              <h4>Players: {{filtered.length}}</h4>
+            </div>
           </div>
-          <div class="col-xs-4">
-            <label for="search">items per page:</label>
-            <input type="number" min="1" max="100" class="form-control" ng-model="pageSize">
-          </div>
-          <div class="col-xs-4">
-            <h4>Players: {{filtered.length}}</h4>
+          <br>
+          <table class="table table-bordered table-striped">
+
+            <thead>
+              <tr>
+                <th ng-click="sortTable('position')">Position
+                  <span class="glyphicon sort-icon" ng-show="sortKey=='position'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+                </th>
+                <th ng-click="sortTable('name')">Player
+                  <span class="glyphicon sort-icon" ng-show="sortKey=='name'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+                </th>
+                <th ng-click="sortTable('team')">Team
+                  <span class="glyphicon sort-icon" ng-show="sortKey=='team'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+                </th>
+                <th></th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr dir-paginate="player in filtered = (players_left | filter:q | orderBy:sortKey:reverse) | itemsPerPage: pageSize" current-page="currentPage" >
+                <td>{{ player.positionDescription }}</td>
+                <td>{{ player.name }}</td>
+                <td>{{ player.team }}</td>
+                <td><button ng-click="pick(player._id)">Pick</button></td>
+              </tr>
+            </tbody>
+          </table>
+          <div >
+            <div class="text-center">
+              <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="../scripts/dirPagination.tpl.html"></dir-pagination-controls>
+            </div>
           </div>
         </div>
-        <br>
-        <table class="table table-bordered table-striped">
 
-          <thead>
-            <tr>
-              <th ng-click="sortTable('position')">Position
-                <span class="glyphicon sort-icon" ng-show="sortKey=='position'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
-              </th>
-              <th ng-click="sortTable('name')">Player
-                <span class="glyphicon sort-icon" ng-show="sortKey=='name'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
-              </th>
-              <th ng-click="sortTable('team')">Team
-                <span class="glyphicon sort-icon" ng-show="sortKey=='team'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
-              </th>
-              <th></th>
-            </tr>
-          </thead>
+        <div class="col-lg-3">
+          <accordion close-others="oneAtATime">
+            <accordion-group heading="Guarda-Redes">
+              <ul>
+                <li ng-repeat="pick in picks">
+                  <div ng-if="players[pick.player_id].positionDescription =='Guarda-redes'">
+                    {{players[pick.player_id].name}}
+                  </div>
+                </li>
+              </ul>
+            </accordion-group>
+            <accordion-group heading="Defesas">
+              <ul>
+                <li ng-repeat="pick in picks">
+                  <div ng-if="players[pick.player_id].positionDescription =='Defesa'">
+                    {{players[pick.player_id].name}}
+                  </div>
+                </li>
+              </ul>
+            </accordion-group>
+            <accordion-group heading="Médios">
+              <ul>
+                <li ng-repeat="pick in picks">
+                  <div ng-if="players[pick.player_id].positionDescription =='Médio'">
+                    {{players[pick.player_id].name}}
+                  </div>
+                </li>
+              </ul>
+            </accordion-group>
+            <accordion-group heading="Avançados">
+              <ul>
+                <li ng-repeat="pick in picks">
+                  <div ng-if="players[pick.player_id].positionDescription =='Avançado'">
+                    {{players[pick.player_id].name}}
+                  </div>
+                </li>
+              </ul>
+            </accordion-group>
+          </accordion>
+        </div>
 
-          <tbody>
-            <tr dir-paginate="player in filtered = (players_left | filter:q | orderBy:sortKey:reverse) | itemsPerPage: pageSize" current-page="currentPage" >
-              <td>{{ player.positionDescription }}</td>
-              <td>{{ player.name }}</td>
-              <td>{{ player.team }}</td>
-              <td><button ng-click="pick(player._id)">Pick</button></td>
-            </tr>
-          </tbody>
-        </table>
-        <div >
-          <div class="text-center">
-            <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="../scripts/dirPagination.tpl.html"></dir-pagination-controls>
-          </div>
-        </div>
-        </div>
       </div>
     </div>
   </div>
-</div>
-
 </div>
