--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -6,31 +6,131 @@
     <button ng-click="startDraft()">Start Draft</button>
   </div>
 
-  <div class="container">
+  <div class="" id="draft">
+    <!-- ROUNDS  -->
     <div class="row">
-      <div class="col-lg-12">
-        
-        <div class="col-lg-3">
-          <p ng-if="timer > 0">Time left: {{timer}}</p>
-          <p ng-if="currentUser != 'noone'">Currently picking: {{user_list.usernames[currentUser]}}</p>
+      <div class="accordion col-xs-12 no-padding" id="roundsAccordion">
+        <ul id="roundsList">
+          <li class="panel panel-default panel-horizontal">
+            <div class="panel-heading" ng-class="{'active':isActive}"ng-init="isActive = false"ng-init="isActive = false" ng-init="isActive=false" ng-click="isActive = !isActive"><h5 class="panel-title">R o n d a<hr>1</h5></div>
+            <div class="panel-body">
+              <ul>
+                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
+                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
+                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
+                  {{user_list.usernames[user_id]}}
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="panel panel-default panel-horizontal">
+            <div class="panel-heading" ng-class="{'active':isActive}"       ng-click="isActive = !isActive"       ng-click="isActive = !isActive" ng-init="isActive=false" ng-click="isActive = !isActive"><h5 class="panel-title">R o n d a<hr>2</h5></div>
+            <div class="panel-body">
+              <ul>
+                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
+                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
+                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
+                  {{user_list.usernames[user_id]}}
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="panel panel-default panel-horizontal">
+            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive"><h5 class="panel-title">R o n d a<hr>3</h5></div>
+            <div class="panel-body">
+              <ul>
+                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
+                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
+                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
+                  {{user_list.usernames[user_id]}}
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="panel panel-default panel-horizontal">
+            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive"><h5 class="panel-title">R o n d a<hr>4</h5></div>
+            <div class="panel-body">
+              <ul>
+                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
+                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
+                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
+                  {{user_list.usernames[user_id]}}
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="panel panel-default panel-horizontal">
+            <div class="panel-heading" ng-class="{'active':isActive}" ng-init="isActive=false" ng-click="isActive = !isActive"><h5 class="panel-title">R o n d a<hr>5</h5></div>
+            <div class="panel-body">
+              <ul>
+                <li ng-repeat="user_id in user_list.users" ng-class="{ true:'user-picking', false:'' }[currentUser != 'noone']">
+                  <i ng-if="user_list.online[user_id]" class="fa fa-circle user-status user-status-online"></i>
+                  <i ng-if="!user_list.online[user_id]" class="fa fa-circle user-status user-status-offline"></i>
+                  {{user_list.usernames[user_id]}}
+                </li>
+              </ul>
+            </div>
+          </li>
+         </ul>
+      </div>
+    </div>
+    <!-- /ROUNDS  -->
 
-          <p>Users:</p>
-          <ul>
-            <li ng-repeat="user_id in user_list.users">
-              {{user_list.usernames[user_id]}} <span ng-if="user_list.online[user_id]"> - online</span>
-            </li>
-
-          </ul>
-
-          <p>Picks:</p>
-          <ul>
-            <li ng-repeat="pick in picks">
-              {{user_list.usernames[pick.user_id]}}: {{players[pick.player_id].name}} - {{players[pick.player_id].team}} - {{players[pick.player_id].positionDescription}}
-            </li>
-          </ul>
+    <div class="row">
+      <div class="col-lg-12 no-padding">
+        <!-- Favorite Queue -->
+        <div class="col-lg-3 no-padding">
+          <accordion close-others="oneAtATime">
+            <accordion-group heading="Guarda-Redes" is-open="true">
+              <ul>
+                <li ng-repeat="favorite in favorites">
+                  <div ng-if="players[favorite.player_id].positionDescription =='Guarda-redes'">
+                    {{players[favorite.player_id].name}}
+                  </div>
+                  <td><button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                </li>
+              </ul>
+            </accordion-group>
+            <accordion-group heading="Defesas" is-open="true">
+              <ul>
+                <li ng-repeat="favorite in favorites">
+                  <div ng-if="players[favorite.player_id].positionDescription =='Defesa'">
+                    {{players[favorite.player_id].name}}
+                  </div>
+                  <td><button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                </li>
+              </ul>
+            </accordion-group>
+            <accordion-group heading="Médios" is-open="true">
+              <ul>
+                <li ng-repeat="favorite in favorites">
+                  <div ng-if="players[favorite.player_id].positionDescription =='Médio'">
+                    {{players[favorite.player_id].name}}
+                  </div>
+                  <td><button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                </li>
+              </ul>
+            </accordion-group>
+            <accordion-group heading="Avançados" is-open="true">
+              <ul>
+                <li ng-repeat="favorite in favorites">
+                  <div ng-if="players[favorite.player_id].positionDescription =='Avançado'">
+                    {{players[favorite.player_id].name}}
+                  </div>
+                  <td><button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button></td>
+                </li>
+              </ul>
+            </accordion-group>
+          </accordion>
         </div>
+        <!-- /Favorite Queue -->
 
-        <div class="col-lg-6">
+        <!-- Players Section -->
+        <div class="col-lg-6 no-padding">
+          <div class="row">
+            <p ng-if="timer > 0">Time left: {{timer}}</p>
+          </div>
+
           <div class="row">
             <div class="col-xs-4">
               <label for="search">Search:</label>
@@ -70,7 +170,10 @@
                     <td>{{ player.positionDescription }}</td>
                     <td>{{ player.name }}</td>
                     <td>{{ player.team }}</td>
-                    <td><button ng-click="pick(player._id)">Pick</button></td>
+                    <td>
+                      <button ng-click="#"><i class="fa fa-star"></i> Favorite</button>
+                      <button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button>
+                    </td>
                   </tr>
                 </tbody>
               </table>
@@ -104,7 +207,7 @@
                       <td>{{ player.team }}</td>
                       <td><button ng-click="pick(player._id)">Pick</button></td>
                   </tr>
-                </tbody>    
+                </tbody>
               </table>
               <div >
                 <div class="text-center">
@@ -136,7 +239,7 @@
                       <td>{{ player.team }}</td>
                       <td><button ng-click="pick(player._id)">Pick</button></td>
                   </tr>
-                </tbody>    
+                </tbody>
               </table>
               <div >
                 <div class="text-center">
@@ -211,13 +314,13 @@
               </div>
             </tab>
           </tabset>
-  
-          
         </div>
+        <!-- /Players Section -->
 
-        <div class="col-lg-3">
+        <!-- Picked Players -->
+        <div class="col-lg-3 no-padding">
           <accordion close-others="oneAtATime">
-            <accordion-group heading="Guarda-Redes">
+            <accordion-group heading="Guarda-Redes" is-open="true">
               <ul>
                 <li ng-repeat="pick in picks">
                   <div ng-if="players[pick.player_id].positionDescription =='Guarda-redes'">
@@ -226,7 +329,7 @@
                 </li>
               </ul>
             </accordion-group>
-            <accordion-group heading="Defesas">
+            <accordion-group heading="Defesas" is-open="true">
               <ul>
                 <li ng-repeat="pick in picks">
                   <div ng-if="players[pick.player_id].positionDescription =='Defesa'">
@@ -235,7 +338,7 @@
                 </li>
               </ul>
             </accordion-group>
-            <accordion-group heading="Médios">
+            <accordion-group heading="Médios" is-open="true">
               <ul>
                 <li ng-repeat="pick in picks">
                   <div ng-if="players[pick.player_id].positionDescription =='Médio'">
@@ -244,7 +347,7 @@
                 </li>
               </ul>
             </accordion-group>
-            <accordion-group heading="Avançados">
+            <accordion-group heading="Avançados" is-open="true">
               <ul>
                 <li ng-repeat="pick in picks">
                   <div ng-if="players[pick.player_id].positionDescription =='Avançado'">
@@ -255,7 +358,7 @@
             </accordion-group>
           </accordion>
         </div>
-
+        <!-- /Picked Players -->
       </div>
     </div>
   </div>
