players table added

--- a/app/views/league.view.html
+++ b/app/views/league.view.html
@@ -6,6 +6,8 @@
   <pre>{{league}}</pre>
 
   <p ng-if="league.state != 'DURATION'"><a ui-sref="draft({id:league_id})">Draft</a></p>
+  <p><a ui-sref="team_management">My Team</a></p>
+  <p><a ui-sref="players">League Players</a></p>
 
   Users:
   <ul>
