--- a/app/views/home.view.html
+++ b/app/views/home.view.html
@@ -1,22 +1,46 @@
-<div class="jumbotron">
-  <h1>Bitleague</h1>
-  <p class="lead">
-    <img width="350" height="200" src="http:\\placehold.it\350x200">
-  </p>
-</div>
+<div class = "container-fluid no-padding">
+  <div class = "jumbotron">
+    <div class = "fullscreen-bg">
+      <video loop muted autoplay class = "fullscreen-bg_video">
+        <source src = "images/video.mp4" type = "video/mp4">
+      </video>
+    </div>
+    <div class="col-xs-12" id="jumbotron-info">
+      <h1 class="text-center">Bitleague</h1>
+      <p class = "lead text-center">
+        Feel the game! Be the couch! Be the player!
+        <br/>
+        <span class="uppercase">Make your own football</span>
+      </p>
+    </div>
+  </div>
 
-<div class="row marketing">
+  <div class = "row no-side-margin" id="home-marketing-section">
+    <div class = "container">
+      <h2 class = "text-center">Welcome to the game</h2>
+      <hr/>
+      <div class = "col-sm-6 col-xs-12">
+        <img class = "col-sm-12 col-xs-6" src = "images/league.jpg"/>
+        <h4 class = "col-sm-12 col-xs-6 text-center">Create your own leagues with your own rules</h4>
+      </div>
+      <div class = "col-sm-6 col-xs-12">
+        <img class = "col-sm-12 col-xs-6" src = "images/friends.jpg"/>
+        <h4 class = "col-sm-12 col-xs-6 text-center">Draft your team and play with friends</h4>
+      </div>
+    </div>
+  </div>
 
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <div class = "row no-side-margin" id="home-rules-section">
+    <div class = "container">
+      <h2 class = "text-center">Rules</h2>
+      <hr/>
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, explicabo quas quo quos repellendus sint. Ab accusamus inventore saepe totam. Magnam nobis quia reiciendis? Eaque id illum maxime quasi similique!</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, explicabo quas quo quos repellendus sint. Ab accusamus inventore saepe totam. Magnam nobis quia reiciendis? Eaque id illum maxime quasi similique!</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, explicabo quas quo quos repellendus sint. Ab accusamus inventore saepe totam. Magnam nobis quia reiciendis? Eaque id illum maxime quasi similique!</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, explicabo quas quo quos repellendus sint. Ab accusamus inventore saepe totam. Magnam nobis quia reiciendis? Eaque id illum maxime quasi similique!</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, explicabo quas quo quos repellendus sint. Ab accusamus inventore saepe totam. Magnam nobis quia reiciendis? Eaque id illum maxime quasi similique!</li>
+      </ul>
+    </div>
+  </div>
 </div>
