Hotfix: draft now works multiple times without page reload.

--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -74,7 +74,7 @@
                       <td>{{ player.name }}</td>
                       <td>{{ player.team }}</td>
                       <td>
-                        <button ng-click="#"><i class="fa fa-star"></i> Favorite</button>
+                        <button ng-href="#"><i class="fa fa-star"></i> Favorite</button>
                         <button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button>
                       </td>
                     </tr>
