Hotfix: Regarding changes to player API. Warning: only works with the most recent version of the server.

--- a/app/views/draft.view.html
+++ b/app/views/draft.view.html
@@ -75,7 +75,7 @@
                       <td>{{ player.team }}</td>
                       <td>
                         <button ng-href="#"><i class="fa fa-star"></i> Favorite</button>
-                        <button ng-click="pick(player._id)"><i class="fa fa-hand-pointer-o"></i> Pick</button>
+                        <button ng-click="pick(player.data_id)"><i class="fa fa-hand-pointer-o"></i> Pick</button>
                       </td>
                     </tr>
                     </tbody>
